--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Transforme sua visão em realidade com a FCE Serralheria. Descubra soluções personalizadas de alta qualidade para seus projetos residenciais e comerciais. Desde portões elegantes até estruturas metálicas duráveis, estamos aqui para superar suas expectativas. Entre agora e descubra como podemos elevar o seu espaço.">
-
+    <meta name="author" content="Dom Link Soluções Digitais">
+    <meta name="description" content="Transforme sua visão em realidade com a FCE Serralheria. Descubra soluções personalizadas de alta qualidade para seus projetos residenciais e comerciais. Desde portões elegantes até estruturas metálicas duráveis, estamos aqui para superar suas expectativas. Entre agora e descubra como podemos elevar o seu espaço. #serralheria #metal #ferro" src="./assets/image/colonial5.jpeg" src="./assets/image/pac-7.png" src="./assets/image/pic-01.png">
     <title> FCE Serralheria</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
